# Demand-forecasting---ETA-prediction-system

./: .env.example  .gitignore  README.md  pyproject.toml
database/migrations/: 001_initial_schema.sql
docs/: api.md  cache.md  database.md  etl.md  features.md  foundation.md  inference.md  models.md
frontend/: README.md  data.html  eta.html  forecast.html  history.html  index.html  models.html  status.html
frontend/assets/icons/: README.md
frontend/assets/images/: README.md
frontend/components/: loader.js  navbar.js  sidebar.js
frontend/css/: dashboard.css  forms.css  style.css
frontend/js/: api.js  app.js  dashboard.js  data.js  eta.js  forecast.js  history.js  models.js  status.js  utils.js
src/delivery_ml/: __init__.py
src/delivery_ml/api/: __init__.py  app.py  schemas.py
src/delivery_ml/api/routes/: __init__.py  operations.py
src/delivery_ml/cache/: __init__.py  feature_cache.py
src/delivery_ml/config/: __init__.py  settings.py
src/delivery_ml/database/: __init__.py  base.py  models.py  repositories.py  session.py
src/delivery_ml/etl/: __init__.py  orders.py
src/delivery_ml/features/: __init__.py  demand.py  eta.py
src/delivery_ml/inference/: __init__.py  services.py
src/delivery_ml/observability/: __init__.py  logging.py
src/delivery_ml/training/: __init__.py  demand.py  eta.py
tests/: __init__.py  conftest.py
tests/frontend/: test_static_frontend.py
tests/unit/: __init__.py
tests/unit/api/: __init__.py  test_app.py
tests/unit/cache/: test_feature_cache.py
tests/unit/config/: test_settings.py
tests/unit/database/: test_models.py  test_repositories.py  test_session.py
tests/unit/etl/: __init__.py  test_orders.py
tests/unit/features/: test_demand.py  test_eta.py
tests/unit/inference/: __init__.py  test_services.py
tests/unit/observability/: test_logging.py
tests/unit/training/: __init__.py  test_demand.py  test_eta.py
