[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "delivery-ml-platform"
version = "0.1.0"
description = "Production platform for food-delivery demand forecasting and ETA prediction."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Delivery ML Platform Team" }]
dependencies = [
  "alembic>=1.13.2,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "joblib>=1.4.2,<2.0.0",
  "numpy>=2.1.0,<3.0.0",
  "pandas>=2.2.3,<3.0.0",
  "psycopg[binary]>=3.2.1,<4.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.5.2,<3.0.0",
  "python-json-logger>=2.0.7,<4.0.0",
  "redis>=5.0.8,<6.0.0",
  "scikit-learn>=1.5.2,<2.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "uvicorn[standard]>=0.30.6,<1.0.0",
  "xgboost>=2.1.1,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "coverage>=7.6.1,<8.0.0",
  "mypy>=1.11.2,<2.0.0",
  "pandas-stubs>=2.2.3.241126,<3.0.0",
  "pytest>=8.3.3,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "pytest-cov>=5.0.0,<7.0.0",
  "ruff>=0.6.9,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/delivery_ml"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers --strict-config -q"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["delivery_ml"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["delivery_ml"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["joblib", "xgboost", "sklearn.*"]
ignore_missing_imports = true
